# design-graph

./: .coverage  .gitignore  Makefile  README.md  _paths.py  build_graph.py  diagram.excalidraw  extract_design_system.py  mcp-config.example.json  mcp_server.py  pyproject.toml  query.py  watch_prototype.sh
.githooks/: post-commit
.github/workflows/: tests.yml
docs/changes/: README.md
docs/changes/C01-core-parsing/: T01-source-loader.md  T04-token-extractor.md  T05-html-parser.md  plan.md
docs/changes/C02-component-extraction/: T06-component-extractor.md  T08-section-extractor.md
docs/changes/C03-graph-layer/: T10-graph-writer.md  plan.md  spec.md
docs/changes/C04-pipeline-mcp/: T13-pipeline-coordinator.md  T15-mcp-tools.md  plan.md
docs/changes/C05-chunker/: T16-chunker.md  plan.md
docs/changes/C06-concurrency/: spec.md
docs/changes/C07-reader-query-correctness/: T17-reader-transitive-fix.md  plan.md  spec.md
docs/changes/C08-component-discovery-tools/: T18-list-components-tool.md  T19-get-component-spec-tool.md  plan.md  spec.md
docs/changes/C09-style-token-linkage/: T20-style-token-edge.md  plan.md  spec.md
docs/changes/C10-css-class-resolution/: T21-css-class-resolver.md  plan.md  spec.md
docs/changes/C11-jsx-completeness/: T22-jsx-typed-markers.md  plan.md  spec.md
docs/plan/: 00-migration-strategy.md  02-phase-extraction.md
docs/spec/: 00-overview.md  01-parsing.md  02-extraction.md  04-mcp.md  05-chunker.md
docs/tasks/: T01-source-loader.md  T02-format-detector.md  T03-js-parser.md  T04-token-extractor.md  T05-html-parser.md  T06-component-extractor.md  T07-screen-extractor.md  T08-section-extractor.md  T09-graph-schema.md  T10-graph-writer.md  T11-graph-reader.md  T12-graph-diff.md  T13-pipeline-coordinator.md  T14-mcp-search.md  T15-mcp-tools.md  T16-chunker.md  backlog.md
scripts/: auto_version.py
src/design_graph/: paths.py  workspace.py
src/design_graph/cli/: _logging.py  build.py  databases.py  query.py  report.py  status.py  validate.py
src/design_graph/core/: constants.py  graph_catalog.py  models.py  patterns.py
src/design_graph/extraction/: chunker.py  component_extractor.py  plain_html_component_extractor.py  prop_extractor.py  screen_extractor.py  section_extractor.py  visual_function.py
src/design_graph/graph/: diff.py  reader.py  schema.py  writer.py
src/design_graph/mcp/: aliases.py  search.py  server.py  tools.py
src/design_graph/parsing/: css_class_resolver.py  format_detector.py  html_parser.py  js_parser.py  source_loader.py  token_extractor.py
src/design_graph/pipeline/: build_progress.py  coordinator.py  state.py
tests/: conftest.py  test_architecture_guardrails.py  test_build.py  test_mcp_server.py  test_paths.py
tests/fixtures/: large_bundle.html  plain.html  simple.html
tests/integration/: test_cli_end_to_end.py  test_large_prototype_stress.py  test_mcp_e2e.py  test_pipeline.py  test_plain_html_pipeline.py  test_report_e2e.py  test_status_command_e2e.py
tests/unit/: test_graph_workspace.py
tests/unit/cli/: test_build_cli.py  test_database_maintenance_cli.py  test_json_output.py  test_query_cli.py  (+5 more)
(+49 files in other folders)
